--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p class="newprice">$149.99</p>
         <p class="oldprice">$169.99</p>
       </div>
-      <button><img src="/images/icon-cart.svg" alt="icon-cart">Add to Cart</button>
+      <button><img src="./images/icon-cart.svg" alt="icon-cart">Add to Cart</button>
     </div>
 
   </div>
